@@ -3,15 +3,12 @@ package com.example.EcommerceApp.config;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -19,6 +16,7 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
@@ -26,7 +24,7 @@ public class SecurityConfig {
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                 .requestMatchers("/products/**").permitAll()
                 .requestMatchers("/api/**").permitAll()
-                .anyRequest().authenticated()
+                .anyRequest().permitAll()
             );
 
         return http.build();
@@ -34,49 +32,34 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration config = new CorsConfiguration();
-        
-        // Allow specific origin
-        config.setAllowedOrigins(Arrays.asList(
+
+        config.setAllowedOrigins(List.of(
+            "https://ecommerce-app-three-ruby.vercel.app",
             "https://ecommerce-app-git-main-manonmani.vercel.app",
-            "http://localhost:3000" // For local testing
+            "https://my-ecommerce-backend-gqci.onrender.com/products",
+            "http://localhost:3000",
+            "http://127.0.0.1:5500"
         ));
-        
-        // Allow all methods
-        config.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+
+        config.setAllowedMethods(List.of(
+            "GET",
+            "POST",
+            "PUT",
+            "DELETE",
+            "OPTIONS",
+            "PATCH"
         ));
-        
-        // Allow all headers (or specify needed ones)
-//        config.setAllowedHeaders(Arrays.asList(
-//            "Authorization",
-//            "Content-Type",
-//            "Accept",
-//            "X-Requested-With",
-//            "Cache-Control"
-//        ));
+
         config.setAllowedHeaders(List.of("*"));
-        
-        // IMPORTANT: Set to true for cookies/auth headers
+
         config.setAllowCredentials(true);
-        
-        // Set max age for preflight requests
         config.setMaxAge(3600L);
-        
-        // Expose headers if needed
-        config.setExposedHeaders(Arrays.asList(
-            "Authorization",
-            "Content-Type"
-        ));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
+
         return source;
     }
-    
-    // Optional: Add a CorsFilter bean for better control
-//    @Bean
-//    public CorsFilter corsFilter() {
-//        return new CorsFilter(corsConfigurationSource());
-//    }
 }
